<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp">




    <androidx.cardview.widget.CardView
        android:id="@+id/b1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/general"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="220dp"
                android:layout_height="1dp"
                android:layout_marginStart="6dp"
                android:backgroundTint="@color/primary"
                android:layout_marginBottom="4dp"
                android:background="@drawable/bg_statistics_container" />

            <RelativeLayout
                android:id="@+id/container_intake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingHorizontal="4dp"
                android:layout_margin="2dp"
                android:focusable="true">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/intake_goal"
                    android:textColor="@color/on_primary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_intake_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/on_primary"
                    android:padding="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap"
                    tools:text="3350 ml" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:paddingHorizontal="4dp"
                android:clickable="true"
                android:focusable="true">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_centerVertical="true"
                    android:textColor="@color/on_primary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:textColor="@color/on_primary"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap"
                    tools:text="Male" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:clickable="true"
                android:focusable="true">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/on_primary"
                    android:layout_centerVertical="true"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/on_primary"
                    android:textSize="17sp"
                    android:padding="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    tools:ignore="RelativeOverlap"
                    tools:text="83 kg" />


            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.airbnb.lottie.LottieAnimationView
        app:layout_constraintTop_toBottomOf="@id/b1"
        android:layout_marginTop="12dp"
        android:id="@+id/anim1"
        android:layout_width="172dp"
        android:layout_height="172dp"
        android:layout_marginBottom="48dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="general.json"
        android:padding="4dp"
        app:lottie_loop="true" />




</androidx.constraintlayout.widget.ConstraintLayout>